Refactor resume template and helpers
- Updated the main rendering logic in index.js to use handlebars-wax for partials management.
- Added new Handlebars helpers for formatting addresses, dates, and other utilities.
- Removed unused partials (awards, basics, education, interests, languages, publications, references, skills, volunteer, work) to streamline the template.
- Introduced new partials (item-details, item-header, item, header, left-part, right-part, full) for better organization and modularity.
- Enhanced the CSS for improved styling and responsiveness.
- Added a new script for generating PDFs using Puppeteer.
- Updated package.json with new dependencies and scripts for serving and exporting the resume.
- Created a sample resume_example.json for testing purposes.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "jsonresume-theme-boilerplate",
-  "version": "0.1.2",
-  "description": "Boilerplate theme for JSON Resume",
-  "author": "Mattias Erming",
+  "name": "jsonresume-customtemplate",
+  "version": "1.0.5",
+  "description": "Custom json resume template",
+  "author": "tdouillard",
   "repository": {
     "type": "git",
-    "url": "https://github.com/erming/jsonresume-theme-boilerplate"
+    "url": "git+https://github.com/tdouillard/jsonresume-customtemplate.git"
   },
   "license": "MIT",
+  "scripts": {
+    "start": "resume serve --theme .",
+    "export": "resume export resume.pdf --theme ."
+  },
   "dependencies": {
-    "handlebars": "^2.0.0-alpha.4"
+    "address-format": "0.0.3",
+    "express": "^5.1.0",
+    "handlebars": "^4.7.7",
+    "handlebars-wax": "^6.1.0",
+    "moment": "^2.29.4",
+    "resume-cli": "^3.0.8",
+    "swag": "^0.7.0"
   }
 }
