Refacto templates and helpers with new resume data structure; polish styles & config
- Refactor Handlebars helpers (index.js): normalize quotes/formatting, add moment.locale('fr'), add early returns and safer string handling for bullets/pre, tidy exports
- Update views to new data shape: use "name" and "list" subproperties to use different values based on languages
- Replace resume_example.json with a sample matching the updated template structure and fields
- Style adjustments (style.css): typography, spacing, responsive skill layout, minor visual tweaks
- Update package.json to use a custom version of resume-cli

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ resume.json
 .DS_Store
 yarn.lock
 package-lock.json
-public/*.*
+public/*
 # Ignore all Jest/coverage output:
 coverage/*
 
@@ -14,6 +14,8 @@ coverage/*
 !coverage/
 !coverage/badges*.svg
 
+
+.yarn*
 # (Optional) If you want to only keep the summary badge (statements.svg):
 # coverage/badges/*
 # !coverage/badges/statements.svg
