--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "start": "resume serve --theme .",
-    "export": "resume export resume.pdf --theme .",    
+    "export": "resume export resume.pdf --theme .",
     "coverage": "jest --coverage",
     "make-badges": "coverage-badges"
   },
@@ -25,11 +25,14 @@
     "express": "^5.1.0",
     "handlebars": "^4.7.7",
     "handlebars-wax": "^6.1.0",
+    "husky": "^9.1.7",
     "moment": "^2.29.4",
+    "resume-cli": "github:tdouillard/resume-cli#master",
     "swag": "^0.7.0"
   },
   "devDependencies": {
     "coverage-badges-cli": "^2.1.0",
     "jest": "^29.0.0"
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
